; ModuleID = '/home/carl/AnghaBench/git/extr_http-backend.c_read_request.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-backend.c_read_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i8**, i64)* @read_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @read_request(i32 %0, i8** %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8** %1, i8*** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i32, i32* %5, align 4
  %12 = load i8**, i8*** %6, align 8
  %13 = call i64 @read_request_eof(i32 %11, i8** %12)
  store i64 %13, i64* %4, align 8
  br label %19

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = load i64, i64* %7, align 8
  %17 = load i8**, i8*** %6, align 8
  %18 = call i64 @read_request_fixed_len(i32 %15, i64 %16, i8** %17)
  store i64 %18, i64* %4, align 8
  br label %19

19:                                               ; preds = %14, %10
  %20 = load i64, i64* %4, align 8
  ret i64 %20
}

declare dso_local i64 @read_request_eof(i32, i8**) #1

declare dso_local i64 @read_request_fixed_len(i32, i64, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
